# noa

./: .gitignore  README.md  eslint.config.js  package.json  playwright.config.js  snapcraft.yaml  svelte.config.js  tailwind.config.js  vite.config.js  vitest.config.js  zapstore.yaml
.github/workflows/: main.yml
cicd/: debug-install.sh  debug-publish.sh  install-desktop.sh  release-android.sh  release-native-apps.sh  release-publish.sh  release-web.sh
src/: app.css  hooks.client.js  server.cjs
src-tauri/: Cargo.toml  tauri.conf.json5
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/cli/: cashuFunctions.js  cli.js
src/lib/: CopyButton.svelte  Update.svelte  apps.js  cipher.js  db.js  download-keys.js  open-url.js  relay-connection.js  relays-pool-connection.js  relays.js  stores.js  support.js  util.js
src/lib/layout/: AndroidStores.svelte  Apps.svelte  Footer.svelte  Header.svelte  Transition.svelte
src/routes/: +error.svelte  +layout.js  +layout.svelte  +page.js  +page.svelte
src/routes/about/: +page.svelte
src/routes/biometric/: +page.svelte
src/routes/chats/: +page.js  +page.svelte
src/routes/download/: +page.js  +page.svelte
tauri/: Cargo.toml  tauri.conf.json5
tauri/capabilities/: desktop.json
tauri/src/: lib.rs
tests/: generate-identity.test.js  pages.test.js  signer.test.js
tests/cashu/: cashu.test.js  data-samples.md  docs.md
tests/playwright/: generate-identity.test.js  pages.test.js  signer.test.js
tests/unit/: duckduckgo-answer.json  unit.test.js
(+19 files in other folders)
