[package]
name = "NOA"
version = "0.6.0-beta.1"
description = "Nostr Onboard Application"
authors = ["Daniele Dellafiore"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "GPL-v3"
homepage = "https://noa.frankie.tools"
repository = "https://github.com/ildella/noa"
# documentation = "https://docs.your_project.com"

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
# tauri = { version = "2.0.1", features = [] }
tauri = { version = "2.1.1", features = ["config-json5", "image-png", "tray-icon"] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-deep-link = "2.2.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.2.0"
tauri-plugin-cli = "2.2.0"
tauri-plugin-single-instance = { version = "2.2.0", features = ["deep-link"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2.2.0"
